--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-device-info": "^8.7.1",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-image-crop-picker": "^0.37.3",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
