--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-device-info": "^8.7.1",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-image-crop-picker": "^0.37.3",
+    "react-native-image-picker": "^4.8.3",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-reanimated": "^2.8.0",
@@ -29,6 +30,7 @@
     "react-native-screens": "^3.13.1",
     "react-native-splash-screen": "^3.3.0",
     "react-native-status-bar-height": "^2.6.0",
+    "react-native-vector-icons": "^9.1.0",
     "react-redux": "^8.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1"
