--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.67.2",
     "react-native-actions-sheet": "^0.6.1",
     "react-native-device-info": "^8.7.1",
+    "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-image-crop-picker": "^0.37.3",
     "react-native-image-picker": "^4.8.3",
