--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native": "0.67.2",
     "react-native-actions-sheet": "^0.6.1",
     "react-native-animatable": "^1.3.3",
+    "react-native-camera": "^4.2.1",
     "react-native-device-info": "^8.7.1",
     "react-native-fast-image": "^8.5.11",
     "react-native-gesture-handler": "^2.4.2",
@@ -30,6 +31,7 @@
     "react-native-image-picker": "^4.8.3",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
