--- a/ios/Podfile
+++ b/ios/Podfile
@@ -15,7 +15,9 @@ target 'PongConnect' do
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
   pod 'react-native-camera', :path => '../node_modules/react-native-camera'
-
+  permissions_path = '../node_modules/react-native-permissions/ios'
+  pod 'Permission-Camera', :path => "#{permissions_path}/Camera"
+  
   target 'PongConnectTests' do
     inherit! :complete
     # Pods for testing
