--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-image-picker": "^4.8.3",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-permissions": "^3.3.1",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
