--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-image-slider-box": "^1.1.24",
     "react-native-keyboard-aware-scrollview": "^2.1.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-modal-datetime-picker": "^7.6.1",
     "react-native-permissions": "^3.3.1",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "^2.8.0",
